--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
   </head>
   <body>
     <nav>
-      <div class="logo">
-        <span class="special-font">Q</span> Store..
-      </div>
+      <label class="logo"><span class="special-font">Q</span> Store..</label>
+      <label for="btn">
+      <img src="menu-button.svg" class="menu-icon">
+      </label>
+      <input type="checkbox" id="btn">
       <ul>
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">CSE</a>
+        <li>
+          <label for="btn-1" class="show">CSE</label>
+          <a href="#">CSE</a>
+          <input type="checkbox" id="btn-1">
           <ul>
             <li><a href="#">1st Sem</a></li>
             <li><a href="#">2nd Sem</a></li>
@@ -24,7 +29,10 @@
             <li><a href="#">7th Sem</a></li>
           </ul>
         </li>
-        <li><a href="#">ECE</a>
+        <li>
+          <label for="btn-1" class="show">ECE</label>
+          <a href="#">ECE</a>
+          <input type="checkbox" id="btn-1">
           <ul>
             <li><a href="#">1st Sem</a></li>
             <li><a href="#">2nd Sem</a></li>
@@ -35,7 +43,10 @@
             <li><a href="#">7th Sem</a></li>
           </ul>
         </li>
-        <li><a href="#">EEE</a>
+        <li>
+          <label for="btn-1" class="show">EEE</label>
+          <a href="#">EEE</a>
+          <input type="checkbox" id="btn-1">
           <ul>
             <li><a href="#">1st Sem</a></li>
             <li><a href="#">2nd Sem</a></li>
@@ -46,7 +57,10 @@
             <li><a href="#">7th Sem</a></li>
           </ul>
         </li>
-        <li><a href="#">MECH</a>
+        <li>
+          <label for="btn-1" class="show">MECH</label>
+          <a href="#">MECH</a>
+          <input type="checkbox" id="btn-1">
           <ul>
             <li><a href="#">1st Sem</a></li>
             <li><a href="#">2nd Sem</a></li>
@@ -58,7 +72,9 @@
           </ul>
         </li>
       </ul>
-      <img class="menu-icon" src="menu-button.svg" alt="Kiwi standing on oval">
     </nav>
+    <div class="trial">
+
+    </div>
   </body>
 </html>
